--- a/README.Rmd
+++ b/README.Rmd
@@ -69,8 +69,8 @@ library(reshape2)
 
 mtcars %>% 
   describe %>% 
-  melt(id.vars = ".column_name") %>% 
-  dcast(variable ~ .column_name, value.var = "value") %>% 
+  melt(id.vars = ".column_name", variable.name = ".variable") %>% 
+  dcast(.variable ~ .column_name, value.var = "value") %>% 
   knitr::kable(format = "markdown")
 ```
 
