--- a/README.Rmd
+++ b/README.Rmd
@@ -62,7 +62,7 @@ mtcars %>%
   knitr::kable(format = "markdown")
 ```
 
-To mimic the exact `pandas.describe()` behavior, use `reshape2` to `melt` and `cast` the data into an appropriate form. This is not recommendated as all columns will be coerced into character vectors.
+To mimic the exact `pandas.describe()` behavior, use `reshape2` to `melt()` and `cast()` the data into an appropriate form. This is not recommendated as all columns will be coerced into character vectors.
 
 ```{r}
 library(reshape2)
