update with gratipay

--- a/README.Rmd
+++ b/README.Rmd
@@ -79,3 +79,8 @@ pandas_describe_mtcars %>%
 str(pandas_describe_mtcars)
 ```
 
+## Author
+
+The original author of `describer` is [Paul Hendricks](https://github.com/paulhendricks).
+
+[![Support via Gratipay](https://cdn.rawgit.com/gratipay/gratipay-badge/2.3.0/dist/gratipay.png)](https://gratipay.com/paulhendricks/)
