--- a/README.Rmd
+++ b/README.Rmd
@@ -16,11 +16,11 @@ knitr::opts_chunk$set(
 
 # describer
 
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/describer)](http://cran.r-project.org/package=describer)
+[![Downloads from the RStudio CRAN mirror](http://cranlogs.r-pkg.org/badges/describer)](http://cran.rstudio.com/package=describer)
 [![Build Status](https://travis-ci.org/paulhendricks/describer.png?branch=master)](https://travis-ci.org/paulhendricks/describer)
 [![Build status](https://ci.appveyor.com/api/projects/status/jyh7mh23q1htalww/branch/master?svg=true)](https://ci.appveyor.com/project/paulhendricks/describer/branch/master)
 [![codecov.io](http://codecov.io/github/paulhendricks/describer/coverage.svg?branch=master)](http://codecov.io/github/paulhendricks/describer?branch=master)
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/describer)](http://cran.r-project.org/package=describer)
-[![Downloads from the RStudio CRAN mirror](http://cranlogs.r-pkg.org/badges/describer)](http://cran.rstudio.com/package=describer)
 [![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/0.1.0/active.svg)](http://www.repostatus.org/#active)
 
 `describer` quickly and easily describes data using common descriptive statistics.
@@ -29,13 +29,17 @@ knitr::opts_chunk$set(
 
 You can install:
 
-* the latest released version from CRAN with
+* the latest released version from CRAN:
+
+    [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/describer)](http://cran.r-project.org/package=describer)
 
     ```R
     install.packages("describer")
     ````
 
-* the latest development version from github with
+* the latest development version from Github:
+
+        [![GitHub version](https://badge.fury.io/gh/paulhendricks%2Fanonymizer.svg)](http://badge.fury.io/gh/paulhendricks%2Fanonymizer)
 
     ```R
     if (packageVersion("devtools") < 1.6) {
@@ -79,8 +83,13 @@ pandas_describe_mtcars %>%
 str(pandas_describe_mtcars)
 ```
 
-## Author
+## People
 
-The original author of `describer` is [Paul Hendricks](https://github.com/paulhendricks).
+* The original author of `describer` is [Paul Hendricks](https://github.com/paulhendricks). [![Gratipay](https://img.shields.io/gratipay/JSFiddle.svg)](https://gratipay.com/~paulhendricks/)
 
-[![Support via Gratipay](https://cdn.rawgit.com/gratipay/gratipay-badge/2.3.0/dist/gratipay.png)](https://gratipay.com/paulhendricks/)
+* The lead maintainer of `describer` is [Paul Hendricks](https://github.com/paulhendricks).  [![Gratipay](https://img.shields.io/gratipay/JSFiddle.svg)](https://gratipay.com/~paulhendricks/)
+
+## License
+
+[![License](http://img.shields.io/:license-mit-blue.svg)](https://github.com/paulhendricks/describer/blob/master/LICENSE)
+
