--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,6 @@
 ---
 output:
-  md_document:
-    variant: markdown_github
+  github_document
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -27,28 +26,22 @@ knitr::opts_chunk$set(
 
 ## Installation
 
-You can install:
+You can install the latest development version from CRAN:
 
-* the latest released version from CRAN:
+```R
+install.packages("describer")
+````
 
-    [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/describer)](http://cran.r-project.org/package=describer)
+Or from GitHub with:
 
-    ```R
-    install.packages("describer")
-    ````
+```R
+if (packageVersion("devtools") < 1.6) {
+  install.packages("devtools")
+}
+devtools::install_github("paulhendricks/describer")
+```
 
-* the latest development version from Github:
-
-    [![GitHub version](https://badge.fury.io/gh/paulhendricks%2Fdescriber.svg)](http://badge.fury.io/gh/paulhendricks%2Fdescriber)
-
-    ```R
-    if (packageVersion("devtools") < 1.6) {
-      install.packages("devtools")
-    }
-    devtools::install_github("paulhendricks/describer")
-    ```
-
-If you encounter a clear bug, please file a minimal reproducible example on [github](https://github.com/paulhendricks/describer/issues).
+If you encounter a clear bug, please file a [minimal reproducible example](http://stackoverflow.com/questions/5963269/how-to-make-a-great-r-reproducible-example) on [GitHub](https://github.com/paulhendricks/describer/issues).
 
 ## API
 
@@ -81,12 +74,22 @@ pandas_describe_mtcars %>%
 str(pandas_describe_mtcars)
 ```
 
-## People
+## Citation
 
-* The original author of `describer` is [Paul Hendricks](https://github.com/paulhendricks). [![Gratipay](https://img.shields.io/gratipay/JSFiddle.svg)](https://gratipay.com/~paulhendricks/)
+To cite package ‘anonymizer’ in publications use:
 
-* The lead maintainer of `describer` is [Paul Hendricks](https://github.com/paulhendricks).  [![Gratipay](https://img.shields.io/gratipay/JSFiddle.svg)](https://gratipay.com/~paulhendricks/)
+```
+Paul Hendricks (2015). describer: Describe Data in R Using Common Descriptive Statistics. R package version 0.2.0. https://CRAN.R-project.org/package=describer
+```
 
-## License
+A BibTeX entry for LaTeX users is
 
-[![License](http://img.shields.io/:license-mit-blue.svg)](https://github.com/paulhendricks/describer/blob/master/LICENSE)
+```
+@Manual{,
+  title = {describer: Describe Data in R Using Common Descriptive Statistics},
+  author = {Paul Hendricks},
+  year = {2015},
+  note = {R package version 0.2.0},
+  url = {https://CRAN.R-project.org/package=describer},
+}
+```
